# osf_hackathon_1

./: .gitignore  Cargo.toml  LICENSE.md  README.md  forum api.postman_collection.json  users.json
assets/: not_authenticated.html  register.html
assets/authenticated/: already_logged_in.html  home.html
assets/authenticated/static/api/json/: comments.json  posts.json
assets/authenticated/static/api/json/users/: penky776.json
assets/authenticated/static/js/: index.js  index.ts
assets/authenticated/static/json/: comments.json
assets/unauthenticated/: login.html  not_authenticated.html
src/: authenticate.rs  comment.rs  handler.rs  main.rs  model.rs  post.rs  route.rs  server.rs
