[package]
name = "osf_hackathon_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.107", features = ["std"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
http = "0.2.8"
