[package]
name = "osf_hackathon_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/route.rs"

[dependencies]
serde_json = { version = "1.0.107", features = ["std"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["headers", "macros"] }
serde = { version = "1.0", features = ["derive"] }
http = "0.2.8"
tower-http = { version = "0.4.4", features = ["fs"] }
tower = "0.4.13"
rand = "0.8.5"
rust-argon2 = "2.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
